--- a/code/vehicle-transciever/platformio.ini
+++ b/code/vehicle-transciever/platformio.ini
@@ -8,7 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp12e]
+[env:d1_mini]
 platform = espressif8266
-board = esp12e
+board = d1_mini
 framework = arduino
+upload_port = COM4
+monitor_port = COM4
