--- a/code/vehicle/platformio.ini
+++ b/code/vehicle/platformio.ini
@@ -12,6 +12,8 @@
 platform = atmelavr
 board = uno
 framework = arduino
+upload_port = COM5
+monitor_port = COM5
 lib_deps = 
 	arduino-libraries/Servo@^1.2.1
 	martinsos/HCSR04@^2.0.0
